cors issue solved.